--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -21,7 +21,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://192.168.1.12:5000/"
+      "applicationUrl": "http://localhost:5000/"
     }
   }
 }
