--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   },
   "Data": {
     "Products": {
-      "ConnectionString": "Server=(local);Database=WepPosV1;Trusted_Connection=True;MultipleActiveResultSets=true"
+      "ConnectionString": "Server=(local);Database=WebPosV1;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
   }
 }
