--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   },
   "Data": {
     "Products": {
-      "ConnectionString": "Server=vbroffice.dyndns.org,4000;Database=WebPosV1;User Id=sa;Password=mg812yn;MultipleActiveResultSets=true"
+      "ConnectionString": "Server=(local);Database=WebPosV1;User Id=sa;Password=mg812yn;MultipleActiveResultSets=true"
     }
   }
 }
